# micropython_embed_project

./: CMakeLists.txt  sdkconfig
components/micropython/: CMakeLists.txt  micropython_embed.mk  mpconfigport.h
components/micropython/build-embed/genhdr/: moduledefs.collected  moduledefs.collected.hash  moduledefs.h  qstrdefs.collected.h  qstrdefs.collected.h.hash  qstrdefs.preprocessed.h
components/micropython/build-embed/genhdr/qstr/: @@__@@__@@__micropython__py__runtime.c.qstr
components/micropython/include/: mp_main.h
components/micropython/micropython_embed/genhdr/: mpversion.h
components/micropython/micropython_embed/port/: embed_util.c
components/micropython/src/: mp_main.c
main/: main.c
